# NGIN.ECS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
benchmarks/: Benchmarks.cpp  CMakeLists.txt
cmake/: BoostUT.cmake  BoostUTAddTests.cmake  NGINECSConfig.cmake.in
docs/: API.md  ChangeDetection.md  Commands.md  Entities.md  Queries.md  QuickStart.md  README.md  Storage.md  Systems.md
examples/: CMakeLists.txt
examples/ChangeDetection/: CMakeLists.txt  main.cpp
examples/QuickStart/: CMakeLists.txt  main.cpp
include/NGIN/ECS/: Archetype.hpp  Commands.hpp  ECS.hpp  Entity.hpp  Export.hpp  Query.hpp  Scheduler.hpp  TypeRegistry.hpp  World.hpp
src/: ECS.cpp  Entity.cpp
tests/: CMakeLists.txt
tests/ECS/: ArchetypeTests.cpp  BasicTests.cpp  ChangeDetectionTests.cpp  CommandsTests.cpp  EntityTests.cpp  LifecycleTests.cpp  QueryBasicTests.cpp  SchedulerTests.cpp  TypeRegistryTests.cpp  WorldSpawnSoATests.cpp
