cmake_minimum_required(VERSION 3.16)
project(NGINECSBenchmarks LANGUAGES CXX)

option(NGIN_ECS_BENCHMARK_WITH_ENTT "Enable optional EnTT comparison in benchmarks" OFF)
option(NGIN_ECS_BENCHMARK_WITH_FLECS "Enable optional Flecs comparison in benchmarks" OFF)

add_executable(ECSBenchmarks Benchmarks.cpp)
target_link_libraries(ECSBenchmarks PRIVATE NGIN::ECS)
target_compile_features(ECSBenchmarks PRIVATE cxx_std_23)

if(NGIN_ECS_BENCHMARK_WITH_ENTT)
  find_package(EnTT CONFIG QUIET)
  if(EnTT_FOUND)
    target_link_libraries(ECSBenchmarks PRIVATE EnTT::EnTT)
    target_compile_definitions(ECSBenchmarks PRIVATE NGIN_ECS_BENCHMARK_WITH_ENTT=1)
  else()
    message(WARNING "NGIN_ECS_BENCHMARK_WITH_ENTT=ON but EnTT was not found; building benchmarks without EnTT.")
  endif()
endif()

if(NGIN_ECS_BENCHMARK_WITH_FLECS)
  find_package(flecs CONFIG QUIET)
  if(flecs_FOUND)
    target_link_libraries(ECSBenchmarks PRIVATE flecs::flecs_static)
    target_compile_definitions(ECSBenchmarks PRIVATE NGIN_ECS_BENCHMARK_WITH_FLECS=1)
  else()
    message(WARNING "NGIN_ECS_BENCHMARK_WITH_FLECS=ON but Flecs was not found; building benchmarks without Flecs.")
  endif()
endif()
